--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <center>
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
-            Student. Entrepreneur. Mobile Application Developer<br>
+            Student. Entrepreneur. Mobile Application Developer.<br>
             <button class="btn_one">haha ok</button>
         </div>
     </div>
@@ -82,7 +82,7 @@
                      <button class="btn_one">send</button>
                  </form> 
                  <div id="details">
-                    <a class="btn_social"><i class="fas fa-phone"></i></a>
+                    <a class="btn_social"><a href="https://jeffreypaulraj.github.io"><i class="fas fa-phone"></i></a>
                     <a class="btn_social"><i class="fas fa-at"></i></a>
                     <a class="btn_social"><i class="fab fa-twitter"></i></a>
                     <a class="btn_social"><i class="fab fa-dribbble"></i></a>
@@ -90,7 +90,7 @@
              </div>
     </div>
     <div id="footer">
-        Created by Jeffrey Paulraj <br><br> <a href="https://jeffreypaulraj.github.io">Jeffrey Paulraj</a>
+        <br><br> <a href="https://jeffreypaulraj.github.io">Jeffrey Paulraj</a>
     </div>
 <script src="index.js" type="text/javascript"></script>
 </body>
