--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                      <button class="btn_one">send</button>
                  </form> 
                  <div id="details">
-                    <a class="btn_social"><a href="https://jeffreypaulraj.github.io"><i class="fas fa-phone"></i></a>
+                    <a class="btn_social"><a href="https://jeffreypaulraj.github.io"><i class="fa fa-github"></i></a>
                     <a class="btn_social"><i class="fas fa-at"></i></a>
                     <a class="btn_social"><i class="fab fa-twitter"></i></a>
                     <a class="btn_social"><i class="fab fa-dribbble"></i></a>
