--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div id="middle">
         <div id="tagline" class="animated zoomIn" style="animation-delay:1.8s;">
             Student. Entrepreneur. Mobile Application Developer.<br>
-            <button class="btn_one">haha ok</button>
+            <button class="btn_one"><a href="https://github.com/jeffreypaulraj/">GitHub</button>
         </div>
     </div>
     </center>
