--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
+.em_defaultlink a {
+	color: inherit !important;
+	text-decoration: none !important;
+}
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,6 +24,7 @@
     <div id="title">Jeffrey Paulraj</div><br>
     <div id="links">
         <a href="#skills">skills</a>
+        <a href="#coursework">coursework</a>
         <a href="#work" style="margin:0px 60px;">works</a>
         <a href="#experience">experience</a>
         <a href="#contact">contact</a>
@@ -56,6 +62,20 @@
 
                      </div> 
                  </div>
+             <div id="coursework">
+                 <h1>coursework.</h1>
+                 <h2>AP Physics I</h2>
+                 <h2>AP Calculus BC</h2>
+                 <h2>AP Chemistry</h2>
+                 <h2>AP Computer Science A</h2>
+                 <h2>AP United States History</h2>
+                 <h2>AP Language</h2>
+                 <h2>AP Physics C</h2>
+                 <h2>Multivariable Calculus</h2>
+                 <h2>Linear Algebra</h2>
+                 <h2>Mobile Applications and Development</h2>
+
+             </div>
         
               <div id="work">
                  <h1>works.</h1>
