--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-.em_defaultlink a {
-	color: inherit !important;
-	text-decoration: none !important;
-}
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -110,6 +107,11 @@
                     <a class="btn_social"><i class="fab fa-twitter"></i></a>
                     <a class="btn_social"><i class="fab fa-dribbble"></i></a>
                  </div>   
+			 <div class = "navIcons">
+			<a href = "https://www.instagram.com/arnav.03/"><img src = "images/Instagram_gray.png" width = "26px"alt = "Instagram logo"></a>
+			<a href = "https://github.com/rNuv"><img src = "images/Github_gray.png" width = "26px" alt = "Github logo"></a>
+			<a href = "https://devpost.com/arnavnayak2003?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"><img src = "images/Dev_gray.png" alt = "Devpost logo" width = "26px"></a>
+		</div>
              </div>
     </div>
     <div id="footer">
