--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                     <a class="btn_social"><i class="fab fa-dribbble"></i></a>
                  </div>   
 			 <div class = "navIcons">
-			<a href = "https://www.instagram.com/arnav.03/"><img src = "instagram_png.jpeg" width = "26px"alt = "Instagram logo"></a>
-			<a href = "https://github.com/rNuv"><img src = "github.png" width = "26px" alt = "Github logo"></a>
-			<a href = "https://devpost.com/arnavnayak2003?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"><img src = "devpost.png" alt = "Devpost logo" width = "26px"></a>
+			<a href = "https://www.instagram.com/jeff.p32/"><img src = "instagram.png" width = "26px"alt = "Instagram logo"></a>
+			<a href = "https://github.com/jeffreypaulraj"><img src = "github.png" width = "26px" alt = "Github logo"></a>
+			<a href = "https://devpost.com/jeffreypaulraj?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav"><img src = "devpost.png" alt = "Devpost logo" width = "26px"></a>
 		</div>
              </div>
     </div>
