--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@ Coming Soon!
                  <h1>works.</h1>
 
                  <div class="project">
-                 <h2>project title 1</h2>
+                 <h2>DUInterrupt</h2>
                  <div>
 			 coming soon!
 			 <button class="btn_one">visit project</button>
                 </div>
 
                 <div class="project">
-                 <h2>project title 2</h2>
+                 <h2>ParkWork</h2>
                  <div>
 			coming soon!
 			</div>
